--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@react-email/components": "^1.0.4",
+    "@react-email/render": "^2.0.2",
     "lenis": "^1.3.11",
     "motion": "^12.23.24",
     "next": "^16.1.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-syntax-highlighter": "^16.1.0",
+    "resend": "^6.7.0",
     "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
