--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^7.3.6",
     "@react-email/components": "^1.0.4",
     "@react-email/render": "^2.0.2",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "lenis": "^1.3.11",
     "motion": "^12.23.24",
     "next": "^16.1.0",
